[package]
name = "str_overlap"
version = "0.1.1"
authors = ["Anders Evensen"]
edition = "2015"
description = "A utility function for finding the overlap between two string slices."
license = "MIT OR Apache-2.0"
keywords = ["overlap", "string", "str", "intersection"]
categories = ["text-processing", "algorithms", "no-std"]
readme = "README.md"
repository = "https://github.com/Anders429/str_overlap"
