[package]
name = "str_overlap"
version = "0.1.1"
authors = ["Anders Evensen"]
description = "A utility function for finding the overlap between two string slices."
readme = "README.md"
repository = "https://github.com/Anders429/str_overlap"
license = "MIT OR Apache-2.0"
keywords = ["overlap", "string", "str", "intersection"]
categories = ["text-processing", "algorithms", "no-std"]
build = "build.rs"

[build-depenencies]
autocfg = "1.0.1"
