[package]
name = "str_overlap"
version = "0.4.2"
authors = ["Anders Evensen"]
description = "Methods for finding the overlap between two string slices."
readme = "README.md"
repository = "https://github.com/Anders429/str_overlap"
license = "MIT OR Apache-2.0"
keywords = ["overlap", "string", "str", "intersection"]
categories = ["text-processing", "algorithms", "no-std"]
build = "build.rs"
exclude = [".github/*"]

[build-dependencies]
autocfg = "1.0.1"
